--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,13 +1,20 @@
 ---
-import Layout from "../layouts/Layout.astro"
-
+import { Todo } from '../components/Todo';
+import Layout from '../layouts/Layout.astro';
+import "../styles/global.css"
 ---
 
-<Layout description="about" title="aboutページ">
-  <main>
-    <h1>Welcome to About Page</h1>
-    <p>
-      ようこそ私たちのページへ
-    </p>
-  </main>
+<Layout description="index" title="Welcome to Astro.">
+	<main>
+    <a href="/">Home</a>
+    <a href="/about/">About</a>
+    <a href="/blog">Blog</a>
+    <h1>About Me</h1>
+    <h2>... and my new Astro site!</h2>
+
+    <p>I am working through Astro's introductory tutorial. This is the second page on my website, and it's the first one I built myself!</p>
+
+    <p>This site will update as I complete more of the tutorial, so keep checking back and see how my journey is going!</p>
+		<Todo />
+	</main>
 </Layout>
