--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -6,9 +6,12 @@ import "../styles/global.css"
 
 <Layout description="index" title="Welcome to Astro.">
 	<main>
-		<a href="/">Home</a>
+    <a href="/">Home</a>
     <a href="/about/">About</a>
-		<a href="/blog">Blog</a>
+    <a href="/blog">Blog</a>
+    <h1>My Astro Site</h1>
+  <h1>My Astro Learning Blog</h1>
+  <p>This is where I will post about my journey learning Astro.</p>
 		<Todo />
 	</main>
 </Layout>
