--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,7 +1,6 @@
 ---
-import { Todo } from '../components/Todo';
+import '../styles/global.css';
 import Layout from '../layouts/Layout.astro';
-import "../styles/global.css"
 ---
 
 <Layout description="index" title="Welcome to Astro.">
@@ -17,6 +16,5 @@ import "../styles/global.css"
       <li><a href="/posts/post-2/">Post 2</a></li>
       <li><a href="/posts/post-3/">Post 3</a></li>
     </ul>
-		<Todo />
 	</main>
 </Layout>
