--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,23 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
 import "../styles/global.css"
+
+const pageTitle = 'Home Page';
 ---
 
-<Layout description="index" title="Welcome to Astro.">
-	<main>
-		<a href="/">Home</a>
-    <a href="/about/">About</a>
-		<a href="/blog">Blog</a>
-	</main>
-</Layout>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="viewport" content="width=device-width" />
+    <meta name="generator" content={Astro.generator} />
+		<title>{pageTitle}</title>
+	</head>
+  <body>
+    <Header />
+    <h1>{pageTitle}</h1>
+    <Footer />
+    <script>import "../scripts/menu.js";</script>
+  </body>
+</html>
